[gd_scene load_steps=9 format=2]

[ext_resource path="res://main/global/discord_link.gd" type="Script" id=1]
[ext_resource path="res://assets/shader/interface/circle_mask.tres" type="Shader" id=2]
[ext_resource path="res://assets/font/oxanium/regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://main/game/interface/button.tscn" type="PackedScene" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -176 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "main"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -176.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 176.0 ]
}

[node name="discord_link" type="CanvasLayer"]
layer = 9
script = ExtResource( 1 )

[node name="viewport" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="notification" type="ColorRect" parent="viewport"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1536.0
margin_top = -176.0
margin_right = 1536.0
mouse_filter = 2
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="progress" type="ColorRect" parent="viewport/notification"]
anchor_right = 1.0
margin_bottom = 16.0
mouse_filter = 2
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="bar" type="ColorRect" parent="viewport/notification/progress"]
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.74902, 1, 1 )

[node name="timer" type="Timer" parent="viewport/notification/progress"]
one_shot = true

[node name="timeout" type="Timer" parent="viewport/notification"]
wait_time = 3.0
one_shot = true

[node name="icon" type="ColorRect" parent="viewport/notification"]
material = SubResource( 1 )
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 32.0
margin_right = 144.0
margin_bottom = -16.0
mouse_filter = 2

[node name="message" type="Label" parent="viewport/notification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = 16.0
custom_fonts/font = SubResource( 2 )
text = "Message"
valign = 1

[node name="accept_decline" type="HBoxContainer" parent="viewport/notification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -16.0
rect_min_size = Vector2( 0, 128 )
alignment = 2

[node name="accept" parent="viewport/notification/accept_decline" instance=ExtResource( 4 )]
margin_left = 2464.0
margin_top = 0.0
margin_right = 2752.0
margin_bottom = 128.0
rect_min_size = Vector2( 288, 0 )
text = "Accept"
icon = null
align = 1

[node name="spacer" type="Control" parent="viewport/notification/accept_decline"]
margin_left = 2756.0
margin_right = 2764.0
margin_bottom = 128.0
rect_min_size = Vector2( 8, 0 )

[node name="decline" parent="viewport/notification/accept_decline" instance=ExtResource( 4 )]
margin_left = 2768.0
margin_top = 0.0
margin_right = 3056.0
margin_bottom = 128.0
rect_min_size = Vector2( 288, 0 )
text = "Decline"
icon = null
align = 1

[node name="reload" type="HBoxContainer" parent="viewport/notification"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -16.0
rect_min_size = Vector2( 0, 128 )
alignment = 2

[node name="reload" parent="viewport/notification/reload" instance=ExtResource( 4 )]
margin_left = 2464.0
margin_top = 0.0
margin_right = 2752.0
margin_bottom = 128.0
rect_min_size = Vector2( 288, 0 )
text = "Quit"
icon = null
align = 1

[node name="spacer" type="Control" parent="viewport/notification/reload"]
margin_left = 2756.0
margin_right = 2764.0
margin_bottom = 128.0
rect_min_size = Vector2( 8, 0 )

[node name="dismiss" parent="viewport/notification/reload" instance=ExtResource( 4 )]
margin_left = 2768.0
margin_top = 0.0
margin_right = 3056.0
margin_bottom = 128.0
rect_min_size = Vector2( 288, 0 )
text = "Dismiss"
icon = null
align = 1

[node name="toggle" type="AnimationPlayer" parent="viewport/notification"]
anims/RESET = SubResource( 4 )
anims/main = SubResource( 3 )

[connection signal="timeout" from="viewport/notification/progress/timer" to="." method="notification_accept"]
[connection signal="timeout" from="viewport/notification/timeout" to="." method="notification_decline"]
[connection signal="pressed" from="viewport/notification/accept_decline/accept" to="." method="notification_accept"]
[connection signal="pressed" from="viewport/notification/accept_decline/decline" to="." method="notification_decline"]
[connection signal="pressed" from="viewport/notification/reload/reload" to="." method="notification_reload"]
[connection signal="pressed" from="viewport/notification/reload/dismiss" to="." method="notification_dismiss"]
